[package]
name = "ts_static"
version = "0.1.0"
authors = ["Sibz <12050358+Sibz@users.noreply.github.com>"]
edition = "2018"
description = ""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
rayon = "1.4.0"
rand = "0.7.3"