[package]
name = "ts_static"
version = "0.1.5"
authors = ["Sibz <12050358+Sibz@users.noreply.github.com>"]
edition = "2018"
description = "Wrapper macro for lazy static and a struct to aid in accessing a static in a thread safe way."
license = "GPL-3.0-only"
license-file = "License.txt"
repository = "https://github.com/Sibz/ts_static"
homepage = "https://github.com/Sibz/ts_static"
documentation = "https://github.com/Sibz/ts_static/README.md"

exclude = [".idea/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
rayon = "1.4.0"